segment05-applications/ngx-volumes.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: ngx
  name: ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ngx
  template:
    metadata:
      labels:
        run: ngx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: ngx
        volumeMounts:
          - name: vol
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: vol 
          persistentVolumeClaim:
            claimName: ngx-pv-claim
